scroll bug squashed: reorient indices at end of nav menu was not correct

--- a/styles.css
+++ b/styles.css
@@ -274,7 +274,7 @@ h3 {
     place-items: center;
 	min-width: 100%;
     top: 0;
-	z-index: 5;
+	z-index: 1;
     /* background: lightgray; */
     left: 50%;
 	transform: translateX(-50%);
